manifests/apps/umami/umami-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: umami
  name: umami
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: umami
