manifests/apps/umami/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-main-route
  namespace: umami
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager
  hostnames:
    - "umami.krea.to"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/login
      backendRefs:
        - name: umami
          port: 3000
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit

    - matches:
        - method: GET
        - method: POST
          path:
            type: PathPrefix
            value: /websites
        - method: POST
          path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: umami
          port: 3000


    - matches:
        - method: POST
          path:
            type: PathPrefix
            value: /api/
          headers:
            - type: RegularExpression
              name: Referer
              value: "^https?://([a-zA-Z0-9-]+\\.)*krea\\.to"
        - method: OPTIONS
          path:
            type: PathPrefix
            value: /api/
          headers:
            - type: RegularExpression
              name: Referer
              value: "^https?://([a-zA-Z0-9-]+\\.)*krea\\.to"
      backendRefs:
        - name: umami
          port: 3000
